- updated to Longman telegram framework 0.77.1, refactored namespaces and command descriptions

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
   "autoload": {
     "psr-4": {
         "QuizBot\\": "quizbot/",
+        "QuizBot\\Commands\\": "quizbot/commands/",
         "RockstarsChess\\": "quizbot/lib/RockstarsChess/"
     }
   }
